fixed z-index again again

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@
   align-items: center;
   border-bottom: 2px solid rgb(123,123,123);
   background: #FE5F55;
-  z-index: 20;
+  z-index: 30;
 }
 
 .title {
